feat: public user profile
